Update Customer.java